# rootsstyle

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: changelog_publish.yml  ci.yml  codecov.yml  linting.yml  linting_testing.yml  pr.yml  pr_main_merge.yml  push.yml  pypi_publish.yml  testing.yml
.github/workflows/backup/: changelog_publish.yml  linting_testing.yml
.github/workflows/composite/changelog/: action.yml  update_changelog.py
.github/workflows/composite/linting/: action.yml
.github/workflows/composite/publishing/: action.yml
.github/workflows/composite/testing/: action.yml
.github/workflows/composite/visualizations/: action.yml  actions.yml  create_visualizations.py
examples/: examples.ipynb
rootsstyle/: __init__.py  __main__.py  _colors.py  _fonts.py  _nnls.py  _utils.py  colors.py  cpu.py  fonts.py  functions.py  main.py  main_functions.py  main_style.py  scipy_optimize_nnls.py  style.py  utils.py
scripts/: examples.ipynb  plot_multiplot.py  update_changelog.py
tests/: test_palettes.py  test_plots.py  test_rootsstyle.py  test_rootstyle.py
tests/data/: cpus.csv
