[tool.poetry]
name = "rootsstyle"
version = "0.1.6"
description = "A dataroots inspired theme for matplotlib."
authors = ["YannouRavoet <yannou.ravoet@dataroots.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yannouravoet"

include = [
    "LICENSE",
    "fonts/**/*.ttf"
]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pandas = "^1.3.4"
pytest = "^6.2.5"
seaborn = "^0.11.2"
black = "^21.11b1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
rootstyle = 'rootstyle:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
