[tool.poetry]
name = "rootsstyle"
version = "0.5.1"
description = "A dataroots inspired theme for matplotlib."
authors = ["YannouRavoet <yannou.ravoet@dataroots.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yannouravoet"

include = [
    "LICENSE",
    "fonts/**/*.ttf"
]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
seaborn = "^0.11.2"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pandas = "1.1.5"

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
/(
    | .history
)/
'''


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
